# digital_library

./: .gitignore  README.md  main.py  pyproject.toml  recsys.db  用户手册.docx
artifacts/: item_tfidf.npz  tfidf_vectorizer.joblib  tfidf_vocab.json
backend/: app.py  database.py  ingest.py  models.py  recommender.py  requirements.txt  schemas.py
data/: items_sample.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
scripts/: add_users.py  test_recommendation.py
