[project]
name = "digital-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "implicit==0.7.2",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "scikit-learn==1.3.2",
    "scipy==1.13.1",
    "sqlalchemy==2.0.36",
    "uvicorn==0.30.6",
]
